# generative_chem_reactive_structures

./: .gitignore  DATASETS.md  ENVIRONMENT.md  README.md  Untitled.ipynb  Untitled1.ipynb  environment.yaml  pyproject.toml  sub_train.sbatch
Code/: README.md  __init__.py
Code/Examples/: train_and_eval_egnn.py  train_and_eval_egnn_generalized.py
Code/HelperFunctions/: __init__.py  db_to_h5.py  egnn.py  flow_matching.py  halo8_to_rpsb_pkl.py  utils.py
Code/Visualization/: xyz_visualization.ipynb
Code/Wrappers/: __init__.py  baseline.py  io.py  metrics.py  penalty.py  splits.py  xyz.py
Data/Halo8/: test.pkl  val.pkl
Notebooks/: baseline_masking.ipynb  example_baseline.ipynb  example_baseline_reactOT.ipynb  example_halo8_reactOT_rmsd.ipynb  xyz_visualization.ipynb
local_dev/: README.md
outputs_xyz/: ts_00000.xyz  ts_00001.xyz  ts_00002.xyz  ts_00003.xyz  ts_00004.xyz
rcc.submit/: README.md  launch_notebook.sh  notebook.slurm  sub.sbatch  train_ex.py
rcc.submit/jupyter_logs/: error-47776398.txt  error-47776520.txt  error-47776812.txt  output-47776398.txt
sample_outputs_xyz/: ts_00000.xyz  ts_00001.xyz  ts_00002.xyz  ts_00003.xyz  ts_00004.xyz
